syntax = "proto3";

option go_package = "github.com/beam-cloud/beta9/proto";
import "google/protobuf/timestamp.proto";
import "types.proto";

service WorkerPoolRepositoryService {
  rpc GetWorkerPool(GetWorkerPoolRequest) returns (GetWorkerPoolResponse) {}
}

message GetWorkerPoolRequest { string pool_name = 1; }

message GetWorkerPoolResponse {
  bool ok = 1;
  string error_msg = 2;
}
